eks-install-verify/ingress-pub.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ng-ingress
  namespace: poc
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ng-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ng
                port:
                  number: 80
